Made the increment button ineractive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>People Entered : </h1>
-    <h2>0</h2>
-    <button id="increment-btn">Increment</button>
+    <h2 id="js-people">0</h2>
+    <button id="increment-btn"  onclick="increment()">Increment</button>
+    <button id="save-btn" onclick="save()">Save</button>
 
     <script src="index.js"></script>
 </body>
