Made the save button interactive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2 id="js-people">0</h2>
     <button id="increment-btn"  onclick="increment()">Increment</button>
     <button id="save-btn" onclick="save()">Save</button>
+    <p id="save-el" >Previous Entities : </p>
 
     <script src="index.js"></script>
 </body>
