--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passenger Counter</title>
+    <title>Counter</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>People Entered : </h1>
-    <h2 id="js-people">0</h2>
-    <button id="increment-btn"  onclick="increment()">Increment</button>
-    <button id="save-btn" onclick="save()">Save</button>
-    <p id="save-el" >Previous Entities : </p>
+    <div class="container">
+        <h1>A Simple Counter</h1>
+        <h2 id="js-people">0</h2>
+        <button class="clear" onclick="clearup()">Clear</button>
+        <button class="increment-btn"  onclick="increment()">Increment</button>
+        <button class="save-btn" onclick="save()">Save</button>
+        <button class="reset" onclick="reset()">Reset</button>
+        <p id="save-el" class="entities">Previous Entities : </p>
+    </div>
 
     <script src="index.js"></script>
 </body>
